<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:paddingStart="10dp"
    android:paddingEnd="10dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_view_height"
        android:layout_margin="15dp"
        android:fontFamily="cursive"
        android:gravity="center_horizontal"
        android:text="@string/select_location"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/cityEditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_view_height"
        android:layout_marginTop="100dp"
        android:background="@color/teal_700"
        android:paddingStart="@dimen/padding_large"
        android:paddingEnd="@dimen/padding_large"
        android:hint="@string/search_city_hint"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/stateEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/stateEditText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@color/teal_700"
        android:paddingStart="@dimen/padding_large"
        android:paddingEnd="@dimen/padding_large"
        android:hint="@string/search_state_hint"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/countryEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cityEditText" />

    <EditText
        android:id="@+id/countryEditText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@color/teal_700"
        android:paddingStart="@dimen/padding_large"
        android:paddingEnd="@dimen/padding_large"
        android:hint="@string/search_country_hint"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stateEditText" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/location_permission_row"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/countryEditText">

        <TextView
            android:id="@+id/or_title"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginVertical="@dimen/margin_large"
            android:gravity="center"
            android:paddingStart="@dimen/padding_large"
            android:paddingEnd="@dimen/padding_large"
            android:text="@string/orTitle"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_min="@dimen/sat_score_label_min_width" />

        <Button
            android:id="@+id/requestPermissionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_large"
            android:layout_marginStart="@dimen/margin_large"
            android:gravity="center_vertical"
            android:background="@color/yello_orange"
            android:text="@string/grant_location_access"
            android:paddingStart="@dimen/padding_large"
            android:paddingEnd="@dimen/padding_large"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/or_title"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_large"
            android:layout_marginTop="4dp"
            android:paddingStart="@dimen/padding_large"
            android:paddingEnd="@dimen/padding_large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/requestPermissionButton"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="20dp"
        android:text="@string/search_location"
        android:textColor="@color/dark_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:indeterminate="true"
        android:indeterminateTint="@color/white"
        android:indeterminateTintMode="src_atop"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search" />
</androidx.constraintlayout.widget.ConstraintLayout>