<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginVertical="@dimen/margin_large"
        android:layout_marginTop="4dp"
        android:paddingStart="@dimen/padding_large"
        android:paddingEnd="@dimen/padding_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/location_row"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image">

        <TextView
            android:id="@+id/locationTitle"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginVertical="@dimen/margin_large"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/padding_large"
            android:paddingEnd="@dimen/padding_large"
            android:text="@string/location_name"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_min="@dimen/sat_score_label_min_width" />

        <TextView
            android:id="@+id/locationTitleDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_large"
            android:layout_marginStart="@dimen/margin_large"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/padding_large"
            android:paddingEnd="@dimen/padding_large"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/locationTitle"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/weather_row"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_row">

        <TextView
            android:id="@+id/weather_title"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginVertical="@dimen/margin_large"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/padding_large"
            android:paddingEnd="@dimen/padding_large"
            android:text="@string/weather_title"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_min="@dimen/sat_score_label_min_width" />

        <TextView
            android:id="@+id/weather_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_large"
            android:layout_marginStart="@dimen/margin_large"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/padding_large"
            android:paddingEnd="@dimen/padding_large"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/weather_title"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/windsSpeed_row"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weather_row">

        <TextView
            android:id="@+id/windsSpeed_title"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginVertical="@dimen/margin_large"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/padding_large"
            android:paddingEnd="@dimen/padding_large"
            android:text="@string/windsSpeedTitle"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_min="@dimen/sat_score_label_min_width" />

        <TextView
            android:id="@+id/windsSpeed_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_large"
            android:layout_marginStart="@dimen/margin_large"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/padding_large"
            android:paddingEnd="@dimen/padding_large"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/windsSpeed_title"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/humidity_row"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/windsSpeed_row">

        <TextView
            android:id="@+id/humidity_title"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginVertical="@dimen/margin_large"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/padding_large"
            android:paddingEnd="@dimen/padding_large"
            android:text="@string/humidityTitle"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_min="@dimen/sat_score_label_min_width" />

        <TextView
            android:id="@+id/humidity_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_large"
            android:layout_marginStart="@dimen/margin_large"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/padding_large"
            android:paddingEnd="@dimen/padding_large"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/humidity_title"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/progress_bar"
        android:layout_marginTop="10dp"
        style="?android:attr/progressBarStyleLarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:indeterminate="true"
        android:indeterminateTintMode="src_atop"
        android:indeterminateTint="@color/white"
        />

    <TextView
        android:id="@+id/events_error_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_large"
        android:layout_marginStart="@dimen/margin_large"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/padding_large"
        android:paddingEnd="@dimen/padding_large"
        android:text="@string/no_weather_report"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image" />

    <Button
        android:id="@+id/updateLocation"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="20dp"
        android:text="@string/update_location"
        android:gravity="center_horizontal"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>